--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: xiaogaozi
 disqus_show_comment_count: false
 
 # Google Analytics
