--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: xiaogaozi
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
@@ -91,7 +91,7 @@ disqus_short_name: xiaogaozi
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-26507501-1
    
 # Facebook Like
 facebook_like: false
