--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://xiaogaozi.heroku.com
+url: http://blog.xiaogaozi.org
 title: 自由
 subtitle: 淡泊以明志，宁静以致远。
 author: 小高子
