update about page

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://blog.xiaogaozi.org
-title: 自由
+title: Freedom
 subtitle: 淡泊以明志，宁静以致远。
-author: 小高子
+author: xiaogaozi
 simple_search: http://google.com/search
 description:
 
