--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,9 @@ description:
 date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: http://feeds.feedburner.com/xiaogaozi
+subscribe_rss: /atom.xml
 subscribe_email:
+category_feeds: true
 # RSS feeds can list your email address if you like
 email:
 
